--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/material": "^5.10.1",
     "@reduxjs/toolkit": "^1.8.4",
     "axios": "^0.27.2",
+    "classnames": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2"
